# inversion

./: .gitignore  CLAUDE.md  README.md  conftest.py  pyproject.toml
cases/: README.md
core/: __init__.py  action.py  config.py  drives.py  manifest.py  model.py  rng.py  state.py  sweep.py  world.py
docs/: BUILD_BRIEF.md  CAPABILITY-DELTAS.md  COMPILER-PROTOCOL.md  INCIDENT-2026-07-24-determinism.md
results/: phase-1-homeostasis.json  phase-1-lag-validation.json  phase-10-floor.json  phase-10-replication.json  phase-11-farsight.json  phase-11-replication.json  phase-12-biography.json  phase-12-replication.json  phase-12-search.json  phase-13-replication.json  phase-13-search.json  phase-14-replication.json  phase-14-wager.json  phase-15-attention-a2.json  phase-15-attention-replication.json  phase-15-attention.json  phase-15-authority.json  phase-15-distant-replication.json  phase-15-distant.json  phase-15-geometry-g2.json  phase-15-geometry-replication.json  phase-15-geometry.json  phase-15-mire-leader.json  phase-15-mire-replication.json  phase-15-replication.json  phase-2-validation.json  phase-3-cells.json  phase-3-validation.json  phase-4-validation.json  phase-5-diagram.json  phase-6-validation.json  phase-7-replication.json  phase-7-validation.json  phase-8-validation.json  phase-9-maps.json
scripts/: biography_phase12.py  determinism_canary.py  validate_phase1.py  validate_phase10.py  validate_phase11.py  validate_phase12.py  validate_phase13.py  validate_phase14.py  validate_phase14_stranded.py  validate_phase15.py  validate_phase15_attention.py  (+9 more)
(+37 files in other folders)
