[project]
name = "inversion"
version = "0.1.0"
description = "Population-scale agent-based model of emergent preference inversion"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "matplotlib>=3.11.1",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
